@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-09T08:16:06Z",
-  "count_outdated" : 3255,
-  "uniques_outdated" : 1354,
-  "count" : 3285,
+  "timestamp" : "2023-11-10T00:58:23Z",
+  "count_outdated" : 3257,
+  "uniques_outdated" : 1355,
+  "count" : 3286,
   "uniques" : 1371,
   "clones" : [
-    {
-      "timestamp": "2023-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-27T00:00:00Z",
       "count": 1,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-11-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
